[project]
name = "util-simulation-service"
version = "0.0.0"
description = "Ubiquia CLI utility service for simulating multi-agent flows."
authors = [{ name = "Ubiquia", email = "dev@ubiquia.local" }]
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "pydantic>=2.7",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "pytest-asyncio>=0.23",
]

[project.scripts]
util-simulation-service = "util_simulation_service.main:cli"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/util_simulation_service"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "C90"]
exclude = [".venv", ".git", "build", "dist"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
pythonpath = ["src"]
