[project]
name = "workbench-whisperer"
version = "0.1.0"
description = "Minimal REST microservice for Ubiquia that wraps a user prompt inside a payload object."
readme = "README.md"
authors = [{ name = "Ubiquia", email = "dev@ubiquia.local" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workbench_whisperer"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "C90"]
exclude = [".venv", ".git", "build", "dist"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
pythonpath = ["src"]
